css/index.css
/* ... */
/* Default */
body {
    line-height: var(--site-line-height-normal);
    font-family: var(--site-font-family);
    font-size: var(--site-font-size-normal);
    font-weight: var(--site-font-regular);
    color: var(--site-color-text-normal);
    background-color: var(--site-color-bg);
    overflow-x: hidden;
}

picture {
    display: block;
}

img {
    max-inline-size: 100%;
    block-size: auto;
}

a {
    color: var(--site-link-color);
}

a:visited:not(.btn) {
    --site-link-color: var(--site-link-visited-color);
}

a:hover:not(.btn) {
    --site-link-color: var(--site-color-text-focus);
}

a:active:not(.btn) {
    --site-link-color: var(--site-color-text-active);
}

svg.bi {
    width: var(--site-icon-size);
    height: var(--site-icon-size);
}

a,
.btn,
.form-control {
    transition: var(--site-transition-base);
}

a:focus-visible,
.btn:focus-visible,
.form-control:focus-visible,
a:focus,
.btn:focus,
.form-control:focus {
    outline: none;
}

/* HELPERS */
.text-center {
    text-align: center;
}

.text-small {
    font-size: var(--site-font-size-small) !important;
}

.is-hidden {
    display: none !important;
}

.price-special {
    color: var(--site-color-special);
}

.price-old {
    text-decoration: line-through;
    font-weight: var(--site-font-regular);
    opacity: 0.625;
}

.d-flex {
    display: flex !important;
}

.container {
    width: var(--site-container-width);
    margin: 0 auto;
    padding: 0 var(--site-container-gaps);
}

/* HEADING */
.heading-lg,
.heading-md,
.heading-sm {
    font-weight: var(--site-font-black);
}

.heading-lg {
    font-size: var(--site-heading-lg);
    line-height: var(--site-heading-line-height-lg);
}

.heading-md {
    font-size: var(--site-heading-md);
    line-height: var(--site-heading-line-height-md);
}

.heading-sm {
    font-size: var(--site-heading-sm);
    line-height: var(--site-heading-line-height-md);
}

/* ELEMENTS */
.form-control {
    height: var(--site-control-height);
    padding: var(--site-gaps-half) var(--site-gaps-base);
    border-width: var(--site-control-border-width);
    border-style: solid;
    border-color: var(--site-color-secondary);
    border-radius: var(--site-control-border-radius);
    cursor: pointer;
    background-color: transparent;
    outline: none;
}

.brand-img {
    width: var(--site-logo-size);
    height: var(--site-logo-size);
    display: block;
    border-radius: 50%;
    overflow: hidden;
}

/* BUTTONS */
.btn,
.btn-link {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: var(--site-btn-child-gaps);
}

.btn {
    height: var(--site-control-height);
    padding: var(--site-btn-gaps);
    border-width: var(--site-control-border-width);
    border-style: solid;
    border-color: var(--site-btn-border-color);
    border-radius: var(--site-control-border-radius);
    outline: none;
    background-color: var(--site-btn-bg-color);
    color: var(--site-btn-color);
    font-size: var(--site-font-size-normal);
    text-decoration: none;
    cursor: pointer;
}

.btn:focus ,
.btn:hover {
    --site-btn-color: var(--site-color-text-focus);
}

.btn-border {
    --site-btn-border-color: var(--site-color-dark);
}

.btn-border:focus,
.btn-border:hover {
    --site-btn-border-color: var(--site-color-text-focus);
    --site-btn-color: var(--site-color-text-focus);
}

.btn-accent {
    --site-btn-border-color: var(--site-color-dark);
    --site-btn-bg-color: var(--site-color-dark);
    --site-btn-color: var(--site-color-light);
}

.btn-accent:focus,
.btn-accent:hover {
    --site-btn-bg-color: transparent;
    --site-btn-color: var(--site-color-dark);
}

.btn:disabled {
    --site-btn-color: var(--site-color-dimmed) !important;
}

.btn-border:disabled {
    --site-btn-border-color: var(--site-color-dimmed) !important;
}

.btn-accent:disabled {
    --site-btn-border-color: var(--site-color-dimmed) !important;
    --site-btn-bg-color: var(--site-color-dimmed) !important;
    --site-btn-color: var(--site-color-light) !important;
}

/* MAIN MENU */
.main-menu {
    --menu-transition: all .375s ease-out;
    display: flex;
    justify-content: center;
    flex-direction: var(--main-menu-direction);
    background-color: var(--site-color-lighter);
    transition: var(--menu-transition);
}

.main-menu .btn {
    display: var(--main-menu-close-visibility);
}

.main-menu .btn-link {
    display: var(--main-menu-login-visibility);
}

.main-menu__link {
    padding: var(--site-gaps-base);
    color: var(--main-menu-item-color);
    font-weight: var(--site-font-thin);
    line-height: var(--site-link-line-height);
    text-decoration: none;
    text-transform: uppercase;
    text-align: var(--main-menu-text-align);
}

.main-menu__link:focus,
.main-menu__link:hover {
    --main-menu-item-color: var(--site-color-accent);
}

.main-menu__link:active,
.main-menu__link.is-active {
    background-color: var(--main-menu-item-bg-color);
}

/* SOCIAL LINKS */
.socials {
    display: flex;
    flex-direction: row;
    padding: 0;
}

.socials__item {
    list-style: none;
}

.socials__link {
    display: block;
    padding: var(--site-gaps-half);
}

/* MODALS */
.modal {
    visibility: collapse;
    opacity: 0;
    position: var(--modal-position);
    top: 0;
    left: 0;
    right: 0;
    min-height: 100%;
    z-index: -1;
    background-color: var(--modal-bg-color-rgba);
    transition: var(--modal-transition);
}

.modal.is-visible {
    visibility: visible;
    opacity: 1;
    z-index: 9999;
}

.modal__window {
    width: var(--modal-width);
    height: var(--modal-height);
    max-height: var(--modal-height-max);
    position: relative;
    margin: var(--modal-margin-y) auto;
    padding: var(--modal-gaps);
    border-radius: var(--modal-border-radius);
    box-shadow: var(--modal-shadow);
    background-color: var(--site-color-lighter);
    transition: var(--modal-transition) .3s;
    transform: rotateX(90deg);
    overflow: hidden;
}
/* ... */

